# c-daily

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
Formula/: c-daily.rb
cdl/: __init__.py  __main__.py  aggregate.py  session_reader.py  tui.py
cdl/cmd/: __init__.py  install.py  status.py  tui.py  uninstall.py  web.py
cdl/hooks/: __init__.py  session_summary.py
cdl/insights/: _templates.py  extractor.py  server.py
lib/: aggregate.py  constants.py  diff_utils.py  models.py  session_reader.py  text_utils.py  tui.py
lib/cmd/: install.py  install.sh  status.py  status.sh  tui.py  uninstall.py  uninstall.sh  web.py
lib/hooks/: post-tool.sh  session-summary.sh  session_summary.py
lib/insights/: _templates.py  extractor.py  server.py
tests/: test_aggregate.py  test_diff_utils.py  test_session_reader.py  test_text_utils.py
tests/fixtures/: sample.jsonl
