[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdl"
version = "0.1.0"
description = "Claude Code daily log auto-generator"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["claude", "claude-code", "daily-log", "cli"]

[project.scripts]
cdl = "cdl.__main__:main"

[project.urls]
Homepage = "https://github.com/atsushi729/c-daily"
Repository = "https://github.com/atsushi729/c-daily"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
ignore_missing_imports = true
strict = true
mypy_path = "."

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_calls = false
